sintatico/parser.output
Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: function_declaration_statement
    5            | variable_declaration_statement

    6 block: '{' statements '}'

    7 statements: statements statement
    8           | statement

    9 statement: expression_statement
   10          | io_statement
   11          | return_statement
   12          | variable_declaration_statement
   13          | for_statement
   14          | if_else_statement
   15          | block
   16          | error

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' parameters_optative ')' statement
   18                               | SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' parameters_optative ')' statement

   19 parameters_optative: %empty
   20                    | parameters

   21 parameters: parameters ',' parameter
   22           | parameter

   23 parameter: SIMPLE_TYPE IDENTIFIER
   24          | SIMPLE_TYPE LIST_TYPE IDENTIFIER

   25 for_statement: RW_FOR '(' expression_optative ';' or_expression_optative ';' expression_optative ')' statement

   26 if_else_statement: RW_IF '(' expression ')' statement
   27                  | RW_IF '(' expression ')' statement RW_ELSE statement

   28 expression_statement: expression ';'

   29 io_statement: input_statement
   30             | output_statement

   31 input_statement: IO_READ '(' IDENTIFIER ')' ';'

   32 output_statement: IO_WRITE '(' expression ')' ';'
   33                 | IO_WRITE '(' LIT_STRING ')' ';'

   34 return_statement: RW_RETURN expression ';'

   35 expression: IDENTIFIER '=' expression
   36           | or_expression
   37           | function_call_expression

   38 function_call_expression: IDENTIFIER '(' function_arguments_optional ')'

   39 function_arguments_optional: %empty
   40                            | function_arguments

   41 function_arguments: function_arguments ',' function_argument
   42                   | function_argument

   43 function_argument: expression

   44 expression_optative: %empty
   45                    | expression

   46 or_expression_optative: %empty
   47                       | or_expression

   48 or_expression: or_expression LOGICAL_OP_OR and_expression
   49              | and_expression

   50 and_expression: and_expression LOGICAL_OP_AND equality_expression
   51               | equality_expression

   52 equality_expression: equality_expression EQUALITY_OP relational_expression
   53                    | relational_expression

   54 relational_expression: relational_expression RELATIONAL_OP list_expression
   55                      | list_expression

   56 list_expression: list_expression BINARY_LIST_OP addition_expression
   57                | addition_expression

   58 addition_expression: addition_expression ARITMETIC_OP_ADDITIVE multiplication_expression
   59                    | multiplication_expression

   60 multiplication_expression: multiplication_expression ARITMETIC_OP_MULTIPLICATIVE simple_value
   61                          | simple_value

   62 simple_value: constant
   63             | IDENTIFIER
   64             | ARITMETIC_OP_ADDITIVE simple_value
   65             | '!' simple_value
   66             | UNARY_LIST_OP simple_value
   67             | '(' expression ')'

   68 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER ';'
   69                               | SIMPLE_TYPE LIST_TYPE IDENTIFIER ';'

   70 constant: C_INTEGER
   71         | C_FLOAT
   72         | C_NIL


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 65
    '(' (40) 17 18 25 26 27 31 32 33 38 67
    ')' (41) 17 18 25 26 27 31 32 33 38 67
    ',' (44) 21 41
    ';' (59) 25 28 31 32 33 34 68 69
    '=' (61) 35
    '{' (123) 6
    '}' (125) 6
    error (256) 16
    C_INTEGER <token> (258) 70
    C_FLOAT <token> (259) 71
    C_NIL <token> (260) 72
    LIT_STRING <token> (261) 33
    SIMPLE_TYPE <token> (262) 17 18 23 24 68 69
    LIST_TYPE <token> (263) 18 24 69
    IDENTIFIER <token> (264) 17 18 23 24 31 35 38 63 68 69
    RW_FOR <token> (265) 25
    RW_RETURN <token> (266) 34
    RW_IF <token> (267) 26 27
    RW_ELSE <token> (268) 27
    IO_READ <token> (269) 31
    IO_WRITE <token> (270) 32 33
    BINARY_LIST_OP <token> (271) 56
    UNARY_LIST_OP <token> (272) 66
    ARITMETIC_OP_ADDITIVE <token> (273) 58 64
    ARITMETIC_OP_MULTIPLICATIVE <token> (274) 60
    RELATIONAL_OP <token> (275) 54
    EQUALITY_OP <token> (276) 52
    LOGICAL_OP_OR <token> (277) 48
    LOGICAL_OP_AND <token> (278) 50
    THEN (279)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program <node> (34)
        on left: 1
        on right: 0
    declarations <node> (35)
        on left: 2 3
        on right: 1 2
    declaration <node> (36)
        on left: 4 5
        on right: 2 3
    block <node> (37)
        on left: 6
        on right: 15
    statements <node> (38)
        on left: 7 8
        on right: 6 7
    statement <node> (39)
        on left: 9 10 11 12 13 14 15 16
        on right: 7 8 17 18 25 26 27
    function_declaration_statement <node> (40)
        on left: 17 18
        on right: 4
    parameters_optative <node> (41)
        on left: 19 20
        on right: 17 18
    parameters <node> (42)
        on left: 21 22
        on right: 20 21
    parameter <node> (43)
        on left: 23 24
        on right: 21 22
    for_statement <node> (44)
        on left: 25
        on right: 13
    if_else_statement <node> (45)
        on left: 26 27
        on right: 14
    expression_statement <node> (46)
        on left: 28
        on right: 9
    io_statement <node> (47)
        on left: 29 30
        on right: 10
    input_statement <node> (48)
        on left: 31
        on right: 29
    output_statement <node> (49)
        on left: 32 33
        on right: 30
    return_statement <node> (50)
        on left: 34
        on right: 11
    expression <node> (51)
        on left: 35 36 37
        on right: 26 27 28 32 34 35 43 45 67
    function_call_expression <node> (52)
        on left: 38
        on right: 37
    function_arguments_optional <node> (53)
        on left: 39 40
        on right: 38
    function_arguments <node> (54)
        on left: 41 42
        on right: 40 41
    function_argument <node> (55)
        on left: 43
        on right: 41 42
    expression_optative <node> (56)
        on left: 44 45
        on right: 25
    or_expression_optative <node> (57)
        on left: 46 47
        on right: 25
    or_expression <node> (58)
        on left: 48 49
        on right: 36 47 48
    and_expression <node> (59)
        on left: 50 51
        on right: 48 49 50
    equality_expression <node> (60)
        on left: 52 53
        on right: 50 51 52
    relational_expression <node> (61)
        on left: 54 55
        on right: 52 53 54
    list_expression <node> (62)
        on left: 56 57
        on right: 54 55 56
    addition_expression <node> (63)
        on left: 58 59
        on right: 56 57 58
    multiplication_expression <node> (64)
        on left: 60 61
        on right: 58 59 60
    simple_value <node> (65)
        on left: 62 63 64 65 66 67
        on right: 60 61 64 65 66
    variable_declaration_statement <node> (66)
        on left: 68 69
        on right: 5 12
    constant <node> (67)
        on left: 70 71 72
        on right: 62


State 0

    0 $accept: • program $end

    SIMPLE_TYPE  shift, and go to state 1

    program                         go to state 2
    declarations                    go to state 3
    declaration                     go to state 4
    function_declaration_statement  go to state 5
    variable_declaration_statement  go to state 6


State 1

   17 function_declaration_statement: SIMPLE_TYPE • IDENTIFIER '(' parameters_optative ')' statement
   18                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER '(' parameters_optative ')' statement
   68 variable_declaration_statement: SIMPLE_TYPE • IDENTIFIER ';'
   69                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER ';'

    LIST_TYPE   shift, and go to state 7
    IDENTIFIER  shift, and go to state 8


State 2

    0 $accept: program • $end

    $end  shift, and go to state 9


State 3

    1 program: declarations •
    2 declarations: declarations • declaration

    SIMPLE_TYPE  shift, and go to state 1

    $end  reduce using rule 1 (program)

    declaration                     go to state 10
    function_declaration_statement  go to state 5
    variable_declaration_statement  go to state 6


State 4

    3 declarations: declaration •

    $end         reduce using rule 3 (declarations)
    SIMPLE_TYPE  reduce using rule 3 (declarations)


State 5

    4 declaration: function_declaration_statement •

    $end         reduce using rule 4 (declaration)
    SIMPLE_TYPE  reduce using rule 4 (declaration)


State 6

    5 declaration: variable_declaration_statement •

    $end         reduce using rule 5 (declaration)
    SIMPLE_TYPE  reduce using rule 5 (declaration)


State 7

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER '(' parameters_optative ')' statement
   69 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 11


State 8

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER • '(' parameters_optative ')' statement
   68 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER • ';'

    '('  shift, and go to state 12
    ';'  shift, and go to state 13


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declarations: declarations declaration •

    $end         reduce using rule 2 (declarations)
    SIMPLE_TYPE  reduce using rule 2 (declarations)


State 11

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER • '(' parameters_optative ')' statement
   69 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER • ';'

    '('  shift, and go to state 14
    ';'  shift, and go to state 15


State 12

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' • parameters_optative ')' statement

    SIMPLE_TYPE  shift, and go to state 16

    ')'  reduce using rule 19 (parameters_optative)

    parameters_optative  go to state 17
    parameters           go to state 18
    parameter            go to state 19


State 13

   68 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER ';' •

    $end         reduce using rule 68 (variable_declaration_statement)
    SIMPLE_TYPE  reduce using rule 68 (variable_declaration_statement)


State 14

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' • parameters_optative ')' statement

    SIMPLE_TYPE  shift, and go to state 16

    ')'  reduce using rule 19 (parameters_optative)

    parameters_optative  go to state 20
    parameters           go to state 18
    parameter            go to state 19


State 15

   69 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER ';' •

    $end         reduce using rule 69 (variable_declaration_statement)
    SIMPLE_TYPE  reduce using rule 69 (variable_declaration_statement)


State 16

   23 parameter: SIMPLE_TYPE • IDENTIFIER
   24          | SIMPLE_TYPE • LIST_TYPE IDENTIFIER

    LIST_TYPE   shift, and go to state 21
    IDENTIFIER  shift, and go to state 22


State 17

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' parameters_optative • ')' statement

    ')'  shift, and go to state 23


State 18

   20 parameters_optative: parameters •
   21 parameters: parameters • ',' parameter

    ','  shift, and go to state 24

    ')'  reduce using rule 20 (parameters_optative)


State 19

   22 parameters: parameter •

    ')'  reduce using rule 22 (parameters)
    ','  reduce using rule 22 (parameters)


State 20

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' parameters_optative • ')' statement

    ')'  shift, and go to state 25


State 21

   24 parameter: SIMPLE_TYPE LIST_TYPE • IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 22

   23 parameter: SIMPLE_TYPE IDENTIFIER •

    ')'  reduce using rule 23 (parameter)
    ','  reduce using rule 23 (parameter)


State 23

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' parameters_optative ')' • statement

    error                  shift, and go to state 27
    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    SIMPLE_TYPE            shift, and go to state 31
    IDENTIFIER             shift, and go to state 32
    RW_FOR                 shift, and go to state 33
    RW_RETURN              shift, and go to state 34
    RW_IF                  shift, and go to state 35
    IO_READ                shift, and go to state 36
    IO_WRITE               shift, and go to state 37
    UNARY_LIST_OP          shift, and go to state 38
    '{'                    shift, and go to state 39
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    block                           go to state 43
    statement                       go to state 44
    for_statement                   go to state 45
    if_else_statement               go to state 46
    expression_statement            go to state 47
    io_statement                    go to state 48
    input_statement                 go to state 49
    output_statement                go to state 50
    return_statement                go to state 51
    expression                      go to state 52
    function_call_expression        go to state 53
    or_expression                   go to state 54
    and_expression                  go to state 55
    equality_expression             go to state 56
    relational_expression           go to state 57
    list_expression                 go to state 58
    addition_expression             go to state 59
    multiplication_expression       go to state 60
    simple_value                    go to state 61
    variable_declaration_statement  go to state 62
    constant                        go to state 63


State 24

   21 parameters: parameters ',' • parameter

    SIMPLE_TYPE  shift, and go to state 16

    parameter  go to state 64


State 25

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' parameters_optative ')' • statement

    error                  shift, and go to state 27
    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    SIMPLE_TYPE            shift, and go to state 31
    IDENTIFIER             shift, and go to state 32
    RW_FOR                 shift, and go to state 33
    RW_RETURN              shift, and go to state 34
    RW_IF                  shift, and go to state 35
    IO_READ                shift, and go to state 36
    IO_WRITE               shift, and go to state 37
    UNARY_LIST_OP          shift, and go to state 38
    '{'                    shift, and go to state 39
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    block                           go to state 43
    statement                       go to state 65
    for_statement                   go to state 45
    if_else_statement               go to state 46
    expression_statement            go to state 47
    io_statement                    go to state 48
    input_statement                 go to state 49
    output_statement                go to state 50
    return_statement                go to state 51
    expression                      go to state 52
    function_call_expression        go to state 53
    or_expression                   go to state 54
    and_expression                  go to state 55
    equality_expression             go to state 56
    relational_expression           go to state 57
    list_expression                 go to state 58
    addition_expression             go to state 59
    multiplication_expression       go to state 60
    simple_value                    go to state 61
    variable_declaration_statement  go to state 62
    constant                        go to state 63


State 26

   24 parameter: SIMPLE_TYPE LIST_TYPE IDENTIFIER •

    ')'  reduce using rule 24 (parameter)
    ','  reduce using rule 24 (parameter)


State 27

   16 statement: error •

    $end         reduce using rule 16 (statement)
    SIMPLE_TYPE  reduce using rule 16 (statement)


State 28

   70 constant: C_INTEGER •

    BINARY_LIST_OP               reduce using rule 70 (constant)
    ';'                          reduce using rule 70 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 70 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 70 (constant)
    RELATIONAL_OP                reduce using rule 70 (constant)
    EQUALITY_OP                  reduce using rule 70 (constant)
    LOGICAL_OP_OR                reduce using rule 70 (constant)
    LOGICAL_OP_AND               reduce using rule 70 (constant)


State 29

   71 constant: C_FLOAT •

    BINARY_LIST_OP               reduce using rule 71 (constant)
    ';'                          reduce using rule 71 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 71 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 71 (constant)
    RELATIONAL_OP                reduce using rule 71 (constant)
    EQUALITY_OP                  reduce using rule 71 (constant)
    LOGICAL_OP_OR                reduce using rule 71 (constant)
    LOGICAL_OP_AND               reduce using rule 71 (constant)


State 30

   72 constant: C_NIL •

    BINARY_LIST_OP               reduce using rule 72 (constant)
    ';'                          reduce using rule 72 (constant)
    ARITMETIC_OP_ADDITIVE        reduce using rule 72 (constant)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 72 (constant)
    RELATIONAL_OP                reduce using rule 72 (constant)
    EQUALITY_OP                  reduce using rule 72 (constant)
    LOGICAL_OP_OR                reduce using rule 72 (constant)
    LOGICAL_OP_AND               reduce using rule 72 (constant)


State 31

   68 variable_declaration_statement: SIMPLE_TYPE • IDENTIFIER ';'
   69                               | SIMPLE_TYPE • LIST_TYPE IDENTIFIER ';'

    LIST_TYPE   shift, and go to state 66
    IDENTIFIER  shift, and go to state 67


State 32

   35 expression: IDENTIFIER • '=' expression
   38 function_call_expression: IDENTIFIER • '(' function_arguments_optional ')'
   63 simple_value: IDENTIFIER •

    '('  shift, and go to state 68
    '='  shift, and go to state 69

    BINARY_LIST_OP               reduce using rule 63 (simple_value)
    ';'                          reduce using rule 63 (simple_value)
    ARITMETIC_OP_ADDITIVE        reduce using rule 63 (simple_value)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 63 (simple_value)
    RELATIONAL_OP                reduce using rule 63 (simple_value)
    EQUALITY_OP                  reduce using rule 63 (simple_value)
    LOGICAL_OP_OR                reduce using rule 63 (simple_value)
    LOGICAL_OP_AND               reduce using rule 63 (simple_value)


State 33

   25 for_statement: RW_FOR • '(' expression_optative ';' or_expression_optative ';' expression_optative ')' statement

    '('  shift, and go to state 70


State 34

   34 return_statement: RW_RETURN • expression ';'

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 32
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    expression                 go to state 71
    function_call_expression   go to state 53
    or_expression              go to state 54
    and_expression             go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    list_expression            go to state 58
    addition_expression        go to state 59
    multiplication_expression  go to state 60
    simple_value               go to state 61
    constant                   go to state 63


State 35

   26 if_else_statement: RW_IF • '(' expression ')' statement
   27                  | RW_IF • '(' expression ')' statement RW_ELSE statement

    '('  shift, and go to state 72


State 36

   31 input_statement: IO_READ • '(' IDENTIFIER ')' ';'

    '('  shift, and go to state 73


State 37

   32 output_statement: IO_WRITE • '(' expression ')' ';'
   33                 | IO_WRITE • '(' LIT_STRING ')' ';'

    '('  shift, and go to state 74


State 38

   66 simple_value: UNARY_LIST_OP • simple_value

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 75
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    simple_value  go to state 76
    constant      go to state 63


State 39

    6 block: '{' • statements '}'

    error                  shift, and go to state 133
    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    SIMPLE_TYPE            shift, and go to state 134
    IDENTIFIER             shift, and go to state 32
    RW_FOR                 shift, and go to state 135
    RW_RETURN              shift, and go to state 136
    RW_IF                  shift, and go to state 137
    IO_READ                shift, and go to state 138
    IO_WRITE               shift, and go to state 139
    UNARY_LIST_OP          shift, and go to state 38
    '{'                    shift, and go to state 140
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    block                           go to state 141
    statements                      go to state 77
    statement                       go to state 78
    for_statement                   go to state 142
    if_else_statement               go to state 143
    expression_statement            go to state 144
    io_statement                    go to state 145
    input_statement                 go to state 146
    output_statement                go to state 147
    return_statement                go to state 148
    expression                      go to state 149
    function_call_expression        go to state 53
    or_expression                   go to state 54
    and_expression                  go to state 55
    equality_expression             go to state 56
    relational_expression           go to state 57
    list_expression                 go to state 58
    addition_expression             go to state 59
    multiplication_expression       go to state 60
    simple_value                    go to state 61
    variable_declaration_statement  go to state 150
    constant                        go to state 63


State 40

   67 simple_value: '(' • expression ')'

    C_INTEGER              shift, and go to state 151
    C_FLOAT                shift, and go to state 152
    C_NIL                  shift, and go to state 153
    IDENTIFIER             shift, and go to state 154
    UNARY_LIST_OP          shift, and go to state 155
    '('                    shift, and go to state 156
    '!'                    shift, and go to state 157
    ARITMETIC_OP_ADDITIVE  shift, and go to state 158

    expression                 go to state 79
    function_call_expression   go to state 159
    or_expression              go to state 160
    and_expression             go to state 161
    equality_expression        go to state 162
    relational_expression      go to state 163
    list_expression            go to state 164
    addition_expression        go to state 165
    multiplication_expression  go to state 166
    simple_value               go to state 167
    constant                   go to state 168


State 41

   65 simple_value: '!' • simple_value

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 75
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    simple_value  go to state 80
    constant      go to state 63


State 42

   64 simple_value: ARITMETIC_OP_ADDITIVE • simple_value

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 75
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    simple_value  go to state 81
    constant      go to state 63


State 43

   15 statement: block •

    $end         reduce using rule 15 (statement)
    SIMPLE_TYPE  reduce using rule 15 (statement)


State 44

   17 function_declaration_statement: SIMPLE_TYPE IDENTIFIER '(' parameters_optative ')' statement •

    $end         reduce using rule 17 (function_declaration_statement)
    SIMPLE_TYPE  reduce using rule 17 (function_declaration_statement)


State 45

   13 statement: for_statement •

    $end         reduce using rule 13 (statement)
    SIMPLE_TYPE  reduce using rule 13 (statement)


State 46

   14 statement: if_else_statement •

    $end         reduce using rule 14 (statement)
    SIMPLE_TYPE  reduce using rule 14 (statement)


State 47

    9 statement: expression_statement •

    $end         reduce using rule 9 (statement)
    SIMPLE_TYPE  reduce using rule 9 (statement)


State 48

   10 statement: io_statement •

    $end         reduce using rule 10 (statement)
    SIMPLE_TYPE  reduce using rule 10 (statement)


State 49

   29 io_statement: input_statement •

    $end         reduce using rule 29 (io_statement)
    SIMPLE_TYPE  reduce using rule 29 (io_statement)


State 50

   30 io_statement: output_statement •

    $end         reduce using rule 30 (io_statement)
    SIMPLE_TYPE  reduce using rule 30 (io_statement)


State 51

   11 statement: return_statement •

    $end         reduce using rule 11 (statement)
    SIMPLE_TYPE  reduce using rule 11 (statement)


State 52

   28 expression_statement: expression • ';'

    ';'  shift, and go to state 82


State 53

   37 expression: function_call_expression •

    ';'  reduce using rule 37 (expression)


State 54

   36 expression: or_expression •
   48 or_expression: or_expression • LOGICAL_OP_OR and_expression

    LOGICAL_OP_OR  shift, and go to state 83

    ';'  reduce using rule 36 (expression)


State 55

   49 or_expression: and_expression •
   50 and_expression: and_expression • LOGICAL_OP_AND equality_expression

    LOGICAL_OP_AND  shift, and go to state 84

    ';'            reduce using rule 49 (or_expression)
    LOGICAL_OP_OR  reduce using rule 49 (or_expression)


State 56

   51 and_expression: equality_expression •
   52 equality_expression: equality_expression • EQUALITY_OP relational_expression

    EQUALITY_OP  shift, and go to state 85

    ';'             reduce using rule 51 (and_expression)
    LOGICAL_OP_OR   reduce using rule 51 (and_expression)
    LOGICAL_OP_AND  reduce using rule 51 (and_expression)


State 57

   53 equality_expression: relational_expression •
   54 relational_expression: relational_expression • RELATIONAL_OP list_expression

    RELATIONAL_OP  shift, and go to state 86

    ';'             reduce using rule 53 (equality_expression)
    EQUALITY_OP     reduce using rule 53 (equality_expression)
    LOGICAL_OP_OR   reduce using rule 53 (equality_expression)
    LOGICAL_OP_AND  reduce using rule 53 (equality_expression)


State 58

   55 relational_expression: list_expression •
   56 list_expression: list_expression • BINARY_LIST_OP addition_expression

    BINARY_LIST_OP  shift, and go to state 87

    ';'             reduce using rule 55 (relational_expression)
    RELATIONAL_OP   reduce using rule 55 (relational_expression)
    EQUALITY_OP     reduce using rule 55 (relational_expression)
    LOGICAL_OP_OR   reduce using rule 55 (relational_expression)
    LOGICAL_OP_AND  reduce using rule 55 (relational_expression)


State 59

   57 list_expression: addition_expression •
   58 addition_expression: addition_expression • ARITMETIC_OP_ADDITIVE multiplication_expression

    ARITMETIC_OP_ADDITIVE  shift, and go to state 88

    BINARY_LIST_OP  reduce using rule 57 (list_expression)
    ';'             reduce using rule 57 (list_expression)
    RELATIONAL_OP   reduce using rule 57 (list_expression)
    EQUALITY_OP     reduce using rule 57 (list_expression)
    LOGICAL_OP_OR   reduce using rule 57 (list_expression)
    LOGICAL_OP_AND  reduce using rule 57 (list_expression)


State 60

   59 addition_expression: multiplication_expression •
   60 multiplication_expression: multiplication_expression • ARITMETIC_OP_MULTIPLICATIVE simple_value

    ARITMETIC_OP_MULTIPLICATIVE  shift, and go to state 89

    BINARY_LIST_OP         reduce using rule 59 (addition_expression)
    ';'                    reduce using rule 59 (addition_expression)
    ARITMETIC_OP_ADDITIVE  reduce using rule 59 (addition_expression)
    RELATIONAL_OP          reduce using rule 59 (addition_expression)
    EQUALITY_OP            reduce using rule 59 (addition_expression)
    LOGICAL_OP_OR          reduce using rule 59 (addition_expression)
    LOGICAL_OP_AND         reduce using rule 59 (addition_expression)


State 61

   61 multiplication_expression: simple_value •

    BINARY_LIST_OP               reduce using rule 61 (multiplication_expression)
    ';'                          reduce using rule 61 (multiplication_expression)
    ARITMETIC_OP_ADDITIVE        reduce using rule 61 (multiplication_expression)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 61 (multiplication_expression)
    RELATIONAL_OP                reduce using rule 61 (multiplication_expression)
    EQUALITY_OP                  reduce using rule 61 (multiplication_expression)
    LOGICAL_OP_OR                reduce using rule 61 (multiplication_expression)
    LOGICAL_OP_AND               reduce using rule 61 (multiplication_expression)


State 62

   12 statement: variable_declaration_statement •

    $end         reduce using rule 12 (statement)
    SIMPLE_TYPE  reduce using rule 12 (statement)


State 63

   62 simple_value: constant •

    BINARY_LIST_OP               reduce using rule 62 (simple_value)
    ';'                          reduce using rule 62 (simple_value)
    ARITMETIC_OP_ADDITIVE        reduce using rule 62 (simple_value)
    ARITMETIC_OP_MULTIPLICATIVE  reduce using rule 62 (simple_value)
    RELATIONAL_OP                reduce using rule 62 (simple_value)
    EQUALITY_OP                  reduce using rule 62 (simple_value)
    LOGICAL_OP_OR                reduce using rule 62 (simple_value)
    LOGICAL_OP_AND               reduce using rule 62 (simple_value)


State 64

   21 parameters: parameters ',' parameter •

    ')'  reduce using rule 21 (parameters)
    ','  reduce using rule 21 (parameters)


State 65

   18 function_declaration_statement: SIMPLE_TYPE LIST_TYPE IDENTIFIER '(' parameters_optative ')' statement •

    $end         reduce using rule 18 (function_declaration_statement)
    SIMPLE_TYPE  reduce using rule 18 (function_declaration_statement)


State 66

   69 variable_declaration_statement: SIMPLE_TYPE LIST_TYPE • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 90


State 67

   68 variable_declaration_statement: SIMPLE_TYPE IDENTIFIER • ';'

    ';'  shift, and go to state 13


State 68

   38 function_call_expression: IDENTIFIER '(' • function_arguments_optional ')'

    C_INTEGER              shift, and go to state 169
    C_FLOAT                shift, and go to state 170
    C_NIL                  shift, and go to state 171
    IDENTIFIER             shift, and go to state 172
    UNARY_LIST_OP          shift, and go to state 173
    '('                    shift, and go to state 174
    '!'                    shift, and go to state 175
    ARITMETIC_OP_ADDITIVE  shift, and go to state 176

    ')'  reduce using rule 39 (function_arguments_optional)

    expression                   go to state 91
    function_call_expression     go to state 177
    function_arguments_optional  go to state 92
    function_arguments           go to state 93
    function_argument            go to state 94
    or_expression                go to state 178
    and_expression               go to state 179
    equality_expression          go to state 180
    relational_expression        go to state 181
    list_expression              go to state 182
    addition_expression          go to state 183
    multiplication_expression    go to state 184
    simple_value                 go to state 185
    constant                     go to state 186


State 69

   35 expression: IDENTIFIER '=' • expression

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 32
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    expression                 go to state 95
    function_call_expression   go to state 53
    or_expression              go to state 54
    and_expression             go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    list_expression            go to state 58
    addition_expression        go to state 59
    multiplication_expression  go to state 60
    simple_value               go to state 61
    constant                   go to state 63


State 70

   25 for_statement: RW_FOR '(' • expression_optative ';' or_expression_optative ';' expression_optative ')' statement

    C_INTEGER              shift, and go to state 28
    C_FLOAT                shift, and go to state 29
    C_NIL                  shift, and go to state 30
    IDENTIFIER             shift, and go to state 32
    UNARY_LIST_OP          shift, and go to state 38
    '('                    shift, and go to state 40
    '!'                    shift, and go to state 41
    ARITMETIC_OP_ADDITIVE  shift, and go to state 42

    ';'  reduce using rule 44 (expression_optative)

    expression                 go to state 96
    function_call_expression   go to state 53
    expression_optative        go to state 97
    or_expression              go to state 54
    and_expression             go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    list_expression            go to state 58
    addition_expression        go to state 59
    multiplication_expression  go to state 60
    simple_value               go to state 61
    constant                   go to state 63


State 71

   34 return_statement: RW_RETURN expression • ';'

    ';'  shift, and go to state 98


State 72

   26 if_else_statement: RW_IF '(' • expression ')' statement
   27                  | RW_IF '(' • expression ')' statement RW_ELSE statement

    C_INTEGER              shift, and go to state 151
    C_FLOAT                shift, and go to state 152
    C_NIL                  shift, and go to state 153
    IDENTIFIER             shift, and go to state 154
    UNARY_LIST_OP          shift, and go to state 155
    '('                    shift, and go to state 156
    '!'                    shift, and go to state 157
    ARITMETIC_OP_ADDITIVE  shift, and go to state 158

    expression                 go to state 99
    function_call_expression   go to state 159
    or_expression              go to state 160
    and_expression             go to state 161
    equality_expression        go to state 162
    relational_expression      go to state 163
    list_expression            go to state 164
    addition_expression        go to state 165
    multiplication_expression  go to state 166
    simple_value               go to state 167
    constant                   go to state 168


State 73

   31 input_statement: IO_READ '(' • IDENTIFIER ')' ';'

    IDENTIFIER  shift, and go to state 100


State 74

   32 output_statement: IO_WRITE '(' • expression ')' ';'
   33                 | IO_WRITE '(' • LIT_STRING ')' ';'

    C_INTEGER              shift, and go to state 151
    C_FLOAT                shift, and go to state 152
    C_NIL                  shift, and go to state 153
    LIT_STRING             shift, and go to state 101
    IDENTIFIER             shift, and go to state 154
    UNARY_LIST_OP          shift, and go to state 155
    '('                    shift, and go to state 156
    '!'                    shift, and go to state 157
    ARITMETIC_OP_ADDITIVE  shift, and go to state 158

    expression                 go to state 102
    function_call_expression   go to state 159
    or_expression              go to state 160
    and_expression             go to state 161
    equality_expression        go to state 162
    relational_expression      go to state 163
    list_expression            go to state 164
    addition_expression        go to state 165
    multiplication_expression  go to state 166
    simple_value               go to state 167
    constant                   go to state 168


State 75

   63 simple_value: IDENTIFIER •
